# finance-datagen

./: .buildinfo  .copier-answers.yaml  .gitignore  Cargo.toml  Makefile  README.html  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: README.doctree  environment.pickle  index.doctree
.doctrees/.github/: CODE_OF_CONDUCT.doctree  pull_request_template.doctree
.doctrees/.github/ISSUE_TEMPLATE/: bug_report.doctree  feature_request.doctree  question.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/finance_datagen/: index.doctree
.doctrees/autoapi/test_all/: index.doctree
.doctrees/docs/src/: API.doctree  DATA.doctree
.doctrees/numpy-2.4.4.dist-info/licenses/numpy/fft/pocketfft/: LICENSE.doctree
.doctrees/numpy-2.4.4.dist-info/licenses/numpy/random/: LICENSE.doctree
.doctrees/numpy/ma/: README.doctree
.doctrees/numpy/random/: LICENSE.doctree
.doctrees/pyarrow/tests/data/orc/: README.doctree
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml
_modules/: finance_datagen.html  index.html
_modules/finance_datagen/: _signals.html
_sources/: README.md.txt  index.md.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/finance_datagen/: index.rst.txt
_sources/docs/src/: API.md.txt
autoapi/: index.html
autoapi/finance_datagen/: index.html
autoapi/test_all/: index.html
docs/src/: API.html  DATA.html  DATA.md
finance_datagen/: __init__.py  _signals.py
finance_datagen/tests/: test_all.py  test_generators.py  test_signals.py
numpy-2.4.4.dist-info/licenses/numpy/fft/pocketfft/: LICENSE.html
numpy-2.4.4.dist-info/licenses/numpy/random/: LICENSE.html
numpy-2.4.4.dist-info/licenses/numpy/random/src/distributions/: LICENSE.html
numpy-2.4.4.dist-info/licenses/numpy/random/src/mt19937/: LICENSE.html
numpy-2.4.4.dist-info/licenses/numpy/random/src/pcg64/: LICENSE.html
numpy-2.4.4.dist-info/licenses/numpy/random/src/philox/: LICENSE.html
numpy-2.4.4.dist-info/licenses/numpy/random/src/sfc64/: LICENSE.html
numpy-2.4.4.dist-info/licenses/numpy/random/src/splitmix64/: LICENSE.html
numpy/ma/: README.html
numpy/random/: LICENSE.html
pyarrow/tests/data/orc/: README.html
rust/: Cargo.toml
rust/python/: lib.rs
rust/python/example/: mod.rs
rust/src/: arrow_util.rs  error.rs  garch.rs  gbm.rs  heston.rs  lib.rs  ohlc.rs  rng.rs  schema.rs
(+8 files in other folders)
