[package]
name = "finance_datagen_py"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "finance_datagen"
path = "rust/python/lib.rs"
crate-type = ["cdylib"]

[dependencies]
finance_datagen = { path = "./rust", version = "*" }
pyo3 = { version = "0.28.2", features = ["abi3", "extension-module", "multiple-pymethods"] }
pyo3-arrow = "0.17"
arrow-array = "58"
arrow-schema = "58"

[profile.release]
panic = 'abort'
lto = true
