[package]
name = "finance_datagen_py"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "finance_datagen"
path = "rust/python/lib.rs"
crate-type = ["cdylib"]

[dependencies]
finance_datagen = { path = "./rust", version = "*" }
pyo3 = { version = "0.28.2", features = ["abi3", "abi3-py310", "extension-module", "multiple-pymethods"] }
# pyo3-arrow's `buffer_protocol` default feature requires `abi3-py311` or
# non-abi3 builds; we target abi3-py310 so disable it. We pass Arrow data
# via PyCapsule (PyArray / PyRecordBatch), not the Python buffer protocol.
pyo3-arrow = { version = "0.17", default-features = false }
arrow-array = "58"
arrow-schema = "58"

[profile.release]
panic = 'abort'
lto = true
