[package]
name = "finance_datagen"
version = "0.1.0"
authors = ["PrettyGoodCapital <prettygoodcapital@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/prettygoodcapital/finance datagen"
description = "Standard financial data generation"

[lib]
name = "finance_datagen"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
arrow-array = "58"
arrow-schema = "58"
arrow-buffer = "58"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
thiserror = "1"

[dev-dependencies]
approx = "0.5"

[profile.test.junit]
path = "junit.xml"

